# nitrate

./: Cargo.toml  LICENSE.third-party  README.md
entrypoint/: Cargo.toml
entrypoint/src/: lib.rs
macro/: Cargo.toml  README.md
macro/src/: accounts.rs  lib.rs
program/: Cargo.toml  README.md
program/src/: account_info.rs  cpi.rs  lib.rs  system.rs
