[package]
name = "nitrate"
description = "A custom lightweight entrypoint for Solana programs"
repository = "https://github.com/nifty-oss/nitrate"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"

[features]
logging = ["nitrate-program/logging"]

[dependencies]
nitrate-macro = { path="../macro" }
nitrate-program = { path="../program" }
