[package]
name = "nitrate"
description = "A custom lightweight entrypoint for Solana programs"
authors = ["nifty-oss maintainers <maintainers@nifty-oss.org>"]
repository = "https://github.com/nifty-oss/nitrate"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"

[features]
logging = ["nitrate-program/logging"]

[dependencies]
nitrate-macro = { version= "0.1.0", path="../macro" }
nitrate-program = { version= "0.1.0", path="../program" }
