[package]
name = "nitrate-macro"
description = "Macro for Nitrate entrypoint programs"
repository = "https://github.com/nifty-oss/nitrate"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.46"
quote = "^1.0"
syn = { version = "^1.0", features = ["extra-traits", "full"] }
