[package]
name = "nitrate-macro"
description = "Macro for Nitrate entrypoint programs"
authors = ["nifty-oss maintainers <maintainers@nifty-oss.org>"]
repository = "https://github.com/nifty-oss/nitrate"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.46"
quote = "^1.0"
syn = { version = "^1.0", features = ["extra-traits", "full"] }
